// cannot be empty.
// TEMPLATE:

// == {es} version n.n.n

//=== Breaking Changes

//=== Deprecations

//=== New Features

//=== Enhancements

//=== Bug Fixes

//=== Regressions

 == {es} version 6.8.2

=== Bug Fixes

* Don't write model size stats when job is closed without any input {ml-pull}512[#512] (issue: {ml-issue}394[#394])

 == {es} version 6.7.2

=== Enhancements

* Adjust seccomp filter to allow the "time" system call {ml-pull}459[#459]

 == {es} version 6.7.0

=== Breaking Changes

=== Deprecations

=== New Features

=== Enhancements

Adjust seccomp filter for Fedora 29. {ml-pull}354[#354]

=== Bug Fixes

* Improve autodetect logic for persistence. {ml-pull}437[#437]

 == {es} version 6.6.2

=== Bug Fixes

* Fixes an issue where interim results would be calculated after advancing time into an empty bucket. {ml-pull}416[#416]

 == {es} version 6.6.0

=== Breaking Changes

=== Deprecations

=== New Features

=== Enhancements

=== Bug Fixes

Fix cause of "Sample out of bounds" error message (See {ml-pull}355[355].}

=== Regressions

 == {es} version 6.5.5

=== Bug Fixes

Fix a race condition if a forecast job requires overflowing to disk but cleanup of temporary
storage fails. This can cause the autodetect process to hang on exit, if more forecast requests
are in the queue. (See {ml-pull}352[352].)

 == {es} version 6.5.3

=== Bug Fixes

Correct query times for model plot and forecast in the bucket to match the times we assign
the samples we add to the model for each bucket. For long bucket lengths, this could result
in apparently shifted model plot with respect to the data and increased errors in forecasts. 

 == {es} version 6.5.0

//=== Breaking Changes

//=== Deprecations

//=== New Features

=== Enhancements

Perform anomaly detection on features derived from multiple bucket values to improve robustness
of detection with respect to misconfigured bucket lengths and improve detection of long lasting
anomalies. (See {ml-pull}175[#175].)
